# rust_server

./: .env  Cargo.toml  editor.db  editor.db-shm  editor.db-wal  readme.md
migrations/: 1_document.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
