[package]
name = "basic_rust_server"
author = ["amar-jay <me@themanan.me>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.89"
serde = { version="1.0.148", features=["derive"] }
uuid = { version="1.2.2", features=["v4"]}
tokio = { version="1.22.0", features=["macros", "rt-multi-thread"]}
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "sqlite"] }
warp = "0.3.3"
anyhow = "1.0.66"
